# AutoResearchLogMaker

./: .gitignore  .pdm-python  INSTALL_ALL_DEPENDENCIES.md  INSTALL_FAST.md  INSTALL_LANGCHAIN.md  README.md  SERVER_START.md  design.md  install-deps.bat  install-deps.ps1  install-deps.sh  plan.md  plan_client.md  pyproject.toml  q2.md  run_server.py  run_server_fixed.bat  run_server_simple.py  start-dev.bat  start-dev.sh  修复依赖问题.bat  快速修复依赖.ps1  快速安装.bat
.cursor/plans/: --autoresearchlogmaker-server-fc5a9cd7.plan.md
lib/server/: database.db
lib/server/static/: config_template.env  default_tool_config.json  default_workflow.json  settings_template.yaml  usertool_config_template.json
lib/server/usrdata/: llm_config.json
lib/server/usrdata/default_project/files/2025-12-16/: record_meta.json
lib/server/usrdata/default_project/files/2025-12-17/: record_meta.json
lib/server/usrdata/default_project/files/2025-12-18/: record_meta.json
lib/server/usrdata/test/: settings.yaml
lib/server/usrdata/test/data/2025-12-18/outputs/: output_20251218_222301.json
lib/server/usrdata/test/data/2025-12-18/workflows/: wf_20251218_215728.json  wf_20251218_215852.json  wf_20251218_222301.json
lib/server/usrdata/test/data/2025-12-20/outputs/: output_20251220_202146.json  output_20251220_202304.json  output_20251220_202334.json  output_20251220_202544.json
lib/server/usrdata/test/files/2025-12-17/: record_meta.json
lib/server/usrdata/test/files/2025-12-18/: record_meta.json
lib/server/usrdata/test/files/2025-12-20/: record_meta.json
lib/server/usrdata/tools/: usertool_3b8ba7c7.json  usertool_dab63ff1.json
lib/server/usrdata/{project_name}/files/{date}/: record_meta.json
src/AutoResearchLogMaker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/client/: .gitignore  .npmrc  CONNECTION_TROUBLESHOOT.md  INSTALL_TROUBLESHOOT.md  METADATA_NOT_FOUND.md  QUICKSTART.md  README.md  TROUBLESHOOT_WHITE_SCREEN.md  check-server.js  electron-builder.json  index.html  install.bat  install.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/client/electron/: main.js  preload.ts  tsconfig.json
src/client/src/: App.vue  main.ts  router.ts  vite-env.d.ts
src/client/src/api/: index.ts
src/client/src/components/: TimelinePanel.vue
src/client/src/composables/: useServerCheck.ts
src/client/src/stores/: project.ts
src/client/src/views/: Files.vue  Results.vue  Settings.vue  Tools.vue  Workflow.vue
src/server/: __init__.py  config.py  database.py  main.py  models.py
src/server/DataManager/: FileManager.py  MetadataManager.py  ToolConfigManager.py  __init__.py
src/server/LLMManager/: LLMService.py  PromptManager.py  __init__.py
src/server/ProjectManager/: ProjectManager.py  SettingsManager.py  __init__.py
src/server/ToolManager/: ExcelReader.py  ImageReader.py  MCPClient.py  PDFParser.py  TextProcessor.py  ToolRegistry.py  __init__.py
src/server/WorkflowManager/: WorkflowEngine.py  WorkflowStorage.py  __init__.py
src/server/routers/: data_router.py  llm_router.py  project_router.py  tool_router.py
