[project]
name = "AutoResearchLogMaker"
version = "0.1.0"
description = "Automated research log maker with AI-powered summarization"
authors = [
    {name = "FrozenFisher", email = "frozenfish41@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langgraph>=0.0.20",
    "pymupdf>=1.23.8",
    "paddlepaddle>=2.5.2",
    "paddleocr>=2.7.0",
    "pillow>=10.1.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.2",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
server = "uvicorn src.server.main:app --reload --host 0.0.0.0 --port 8000"
dev = "uvicorn src.server.main:app --reload --host 127.0.0.1 --port 8000"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
